@@ -4,9 +4,11 @@ CHANGELOG
 * PANConf : enhanced support to load pushed panorama config
 * RuleStore : new function to get rules from parent DeviceGroups
 * AddressGroup : enhanced group loading time & consistency
+* SecurityRule : added userID support (readonly for the moment) + filters for rules-edit.php
 
 utils:
 rules-edit : loading of firewall configurations can now get panorama pushed config, use option 'loadPanoramaPushedConfig'
+rules-edit : added new filters for userid : 'user is.any' 'user is.unknown' 'user is.known' 'user is.prelogon'
 
 
 
